--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
